One more change to fix spacing between image and offer

--- a/src/sxastarter/src/assets/sass/components/_component-cta-banner.scss
+++ b/src/sxastarter/src/assets/sass/components/_component-cta-banner.scss
@@ -37,7 +37,6 @@
 
   .full-width-cta::before, .full-width-cta::after {
     height: 270px;
-    z-index: -1;
   }
 }
 
@@ -59,6 +58,8 @@
       -webkit-box-pack: center;
       -ms-flex-pack: center;
       justify-content: center;
+      z-index: 2;
+      position: relative;
 
       .full-width-cta__figure {
         position: relative;
@@ -114,8 +115,6 @@
         box-shadow: 1px 1px 3px 2px rgba(0, 0, 0, 0.17);
         text-align: center;
         width: 285px;
-        max-height: 293px;
-        margin: -20px auto 40px;
         z-index: 0;
 
         .full-width-cta__link {
@@ -128,6 +127,7 @@
           -ms-flex-direction: column;
           flex-direction: column;
           padding: 30px;
+          text-decoration: none;
 
           .full-width-cta__eyebrow {
             color: #165C7D;
@@ -169,8 +169,8 @@
     left: 0;
     right: 0;
     width: 100%;
-    height: 610px;
-    z-index: -1;
+    height: 270px;
+    z-index: 1;
     top: 0;
   }
 }
